# tfl_labs

./: .gitignore  CMakeLists.txt  Makefile  README.md  console.cpp  docker-compose.yaml  grammar.txt  head.smt2  impl.cpp  include.h  main.cpp  spec.smt  srs_rules  start.bat  tail.smt2  test  test_case.txt  tset.cpp
.github/workflows/: ci.yml
project/: CMakeLists.txt
project/include/: Constant.h  EquivalenceClassesTable.h  Forest.h  GSS.h  Grammar.h  IMAT.h  LRParser.h  MATMock.h  MATMockPolyndrom.h  MainAlgorithm.h  RegexGenerator.h  RegexToGlushkovConverter.h  SLRTable.h  StateMachine.h  StringGenerator.h
project/include/parser/: big_tree.hpp  parser.hpp  parser2.hpp  small_tree.hpp  tset.hpp  vizualizer.hpp
project/src/: EquivalenceClassesTable.cpp  GSS.cpp  Grammar.cpp  LRParser.cpp  MATMock.cpp  MATMockPolyndrom.cpp  MainAlgorithm.cpp  RegexGenerator.cpp  RegexToGlushkovConverter.cpp  SLRTable.cpp  StateMachine.cpp  StringGenerator.cpp
project/src/parser/: big_tree.cpp  parser.cpp  tset.cpp
test/: AutomataToRegex_test.cpp  CMakeLists.txt  basic_test.cpp  fuzz_test.cpp  graph_test.cpp  parser_test.cpp  sgen_test.cpp  tset.cpp  tset_test.cpp
